; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c_sdgecko_readCID.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c_sdgecko_readCID.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_CHANNEL_0 = common dso_local global i64 0, align 8
@EXI_CHANNEL_2 = common dso_local global i64 0, align 8
@CARDIO_ERROR_NOCARD = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sdgecko_readCID(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @EXI_CHANNEL_0, align 8
  %7 = icmp slt i64 %5, %6
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @EXI_CHANNEL_2, align 8
  %11 = icmp sge i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8, %1
  %13 = load i64, i64* @CARDIO_ERROR_NOCARD, align 8
  store i64 %13, i64* %2, align 8
  br label %24

14:                                               ; preds = %8
  %15 = load i64, i64* %3, align 8
  %16 = call i64 @sdgecko_preIO(i64 %15)
  store i64 %16, i64* %4, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %14
  %20 = load i64, i64* %4, align 8
  store i64 %20, i64* %2, align 8
  br label %24

21:                                               ; preds = %14
  %22 = load i64, i64* %3, align 8
  %23 = call i64 @__card_readcid(i64 %22)
  store i64 %23, i64* %2, align 8
  br label %24

24:                                               ; preds = %21, %19, %12
  %25 = load i64, i64* %2, align 8
  ret i64 %25
}

declare dso_local i64 @sdgecko_preIO(i64) #1

declare dso_local i64 @__card_readcid(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
